--- a/lista.html
+++ b/lista.html
@@ -18,5 +18,17 @@
         <a href="about.html" target="_blank" rel="About">Acerca de</a>
       </nav>
     </header>
+    <main>
+      <section>
+        <a href="index.html"
+          ><img src="img/mas.png" alt="Add content" width="25"
+        /></a>
+        <p>2/3 COMPRADO</p>
+      </section>
+      <article>
+        <p>EDITAR ARTICULO</p>
+      </article>
+    </main>
+    <footer></footer>
   </body>
 </html>
